--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@types/recursive-readdir": "^2.2.4",
     "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.7.x",
+    "@commitlint/config-conventional": "^19.8.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.2",
