fix: syntax in main workflow [force-release]

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -205,7 +205,7 @@ jobs:
 
       - name: Release packages (changed)
         # Only release changed packages if the lockfile has not changed, but packages have changed
-        if: steps.changed-packages.outputs.lockfile_any_changed == 'false' && !contains(github.event.head_commit.message, '[force-release]' && steps.changed-packages.outputs.packages_any_changed == 'true'
+        if: steps.changed-packages.outputs.lockfile_any_changed == 'false' && !contains(github.event.head_commit.message, '[force-release]') && steps.changed-packages.outputs.packages_any_changed == 'true'
         env:
           CHANGED_FILES: ${{ steps.changed-packages.outputs.packages_all_changed_files }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
