--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,6 +114,7 @@ jobs:
     name: 🌴 Run Cypress tests for examples
     runs-on: ubuntu-latest
     needs: find_examples
+    if: contains(github.event.head_commit.message, '[skip-tests]') == false
     strategy:
       fail-fast: true
       matrix:
@@ -187,11 +188,11 @@ jobs:
               - packages/*/tsconfig.*.json
 
       - name: Setup monorepo
-        if: steps.changed-packages.outputs.lockfile_any_changed == 'true' || steps.changed-packages.outputs.packages_any_changed == 'true'
+        if: steps.changed-packages.outputs.lockfile_any_changed == 'true' || steps.changed-packages.outputs.packages_any_changed == 'true' || contains(github.event.head_commit.message, '[force-release]')
         uses: ./.github/actions/setup-monorepo
 
       - name: Build packages
-        if: steps.changed-packages.outputs.lockfile_any_changed == 'true' || steps.changed-packages.outputs.packages_any_changed == 'true'
+        if: steps.changed-packages.outputs.lockfile_any_changed == 'true' || steps.changed-packages.outputs.packages_any_changed == 'true' || contains(github.event.head_commit.message, '[force-release]')
         run: pnpm build:packages
 
       - name: Release packages (all)
