--- a/package.json
+++ b/package.json
@@ -20,14 +20,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.2",
     "@types/recursive-readdir": "^2.2.4",
     "husky": "^9.1.7",
     "oxlint": "^1.11.2",
-    "recursive-readdir": "^2.2.3",
-    "semantic-release": "^24.2.7",
-    "semantic-release-monorepo": "^8.0.2"
+    "recursive-readdir": "^2.2.3"
   }
 }
