--- a/examples/astro-5/package.json
+++ b/examples/astro-5/package.json
@@ -2,6 +2,7 @@
   "name": "@mocky-balboa/example-astro-5",
   "type": "module",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
