--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "Lewis Nelson",
     "url": "https://lewnelson.com"
   },
+  "private": true,
   "scripts": {
     "build:packages": "pnpm --filter \"./packages/*\" build",
     "build:packages-watch": "pnpm --filter \"./packages/*\" --parallel build:watch",
@@ -18,6 +19,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
+    "@changesets/cli": "^2.29.6",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@types/recursive-readdir": "^2.2.4",
