--- a/sites/docs.mockybalboa.com/package.json
+++ b/sites/docs.mockybalboa.com/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs-mockybalboa-com",
+  "name": "@mocky-balboa/docs-mockybalboa-com",
   "version": "0.0.0",
   "private": true,
   "scripts": {
