--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@types/recursive-readdir": "^2.2.4",
     "husky": "^9.1.7",
+    "octokit": "^5.0.3",
     "oxlint": "^1.11.2",
     "recursive-readdir": "^2.2.3"
   }
