--- a/.github/workflows/validate-build-and-test.yml
+++ b/.github/workflows/validate-build-and-test.yml
@@ -7,6 +7,8 @@ jobs:
   validate_commits:
     name: 📖 Validate commit messages
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -20,6 +22,8 @@ jobs:
     name: 💅 Lint
     needs: validate_commits
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -34,6 +38,8 @@ jobs:
     name: 🧪 Run package tests
     needs: validate_commits
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -51,6 +57,8 @@ jobs:
     name: 🔎 Find examples
     needs: validate_commits
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     outputs:
       examples: ${{ steps.finds-examples.outputs.examples }}
     steps:
@@ -66,6 +74,8 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, '[skip-tests]') == false
     needs: find_examples
+    permissions:
+      contents: read
     strategy:
       fail-fast: true
       matrix:
@@ -113,6 +123,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: find_examples
     if: contains(github.event.head_commit.message, '[skip-tests]') == false
+    permissions:
+      contents: read
     strategy:
       fail-fast: true
       matrix:
