fix: gh actions permissions [skip-tests]

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build-and-test:
+    permissions:
+      contents: read
     uses: ./.github/workflows/validate-build-and-test.yml
 
   canary_release:
