--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -154,8 +154,12 @@ jobs:
 
   release:
     name: 🚀 Release packages
-    needs: build-and-test
     runs-on: ubuntu-latest
+    needs:
+      - lint
+      - package_tests
+      - examples_playwright_tests
+      - examples_cypress_tests
     permissions:
       contents: write
     steps:
