--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,8 +1,7 @@
 name: Pull request workflow
 
 on:
-  pull_request_target:
-    types: [opened, synchronize, reopened]
+  pull_request:
 
 jobs:
   validate_commits:
@@ -14,8 +13,11 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Conventional commit lint
-        uses: ahmadnassri/action-commit-lint@v2.1.17
+      - name: Setup monorepo
+        uses: ./.github/actions/setup-monorepo
+
+      - name: Validate all commits from PR
+        run: pnpm commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
 
   lint:
     name: 💅 Lint
