--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,12 +35,15 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 0
 
-      - name: Fetch Main Branch
-        run: git fetch origin main --depth=1
+      # - name: Fetch Main Branch
+      #   run: git fetch origin main --depth=1
 
-      - name: Fetch Base Branch
-        run: git fetch origin ${{ github.base_ref }} --depth=1
+      # - name: Fetch Base Branch
+      #   run: git fetch origin ${{ github.base_ref }} --depth=1
 
       - name: Setup monorepo
         uses: ./.github/actions/setup-monorepo
