--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -40,10 +40,7 @@ jobs:
           fetch-depth: 0
 
       - name: Fetch Main Branch
-        run: git fetch origin main --depth=1
-
-      - name: Fetch Base Branch
-        run: git fetch origin ${{ github.base_ref }} --depth=1
+        run: git fetch origin main
 
       - name: Setup monorepo
         uses: ./.github/actions/setup-monorepo
