docs: update docs and fix main ci workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.DEPLOY_KEY }
 
       - name: Setup monorepo
         uses: ./.github/actions/setup-monorepo
