--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,31 +4,31 @@ on:
   pull_request:
 
 jobs:
-  # validate_commits:
-  #   name: 📖 Validate commit messages
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #         ref: ${{ github.event.pull_request.head.ref }}
-  #         fetch-depth: 0
+  validate_commits:
+    name: 📖 Validate commit messages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 0
 
-  #     - name: Setup monorepo
-  #       uses: ./.github/actions/setup-monorepo
+      - name: Setup monorepo
+        uses: ./.github/actions/setup-monorepo
 
-  #     - name: Validate all commits from PR
-  #       run: pnpm commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+      - name: Validate all commits from PR
+        run: pnpm commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
 
-  # build_and_test:
-  #   name: 🛠️ Build and test
-  #   needs: validate_commits
-  #   uses: ./.github/workflows/build-and-test.yml
+  build_and_test:
+    name: 🛠️ Build and test
+    needs: validate_commits
+    uses: ./.github/workflows/build-and-test.yml
 
   canary_release:
     name: 🐥 Canary release
-    # needs:
-    #   - build_and_test
+    needs:
+      - build_and_test
     runs-on: ubuntu-latest
     permissions:
       contents: write
