--- a/sites/docs.mockybalboa.com/package.json
+++ b/sites/docs.mockybalboa.com/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "pnpm generate:changelog && pnpm build:changelog && docusaurus build",
+    "build:changelog": "node ./scripts/build-changelog.cjs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
+    "generate:changelog": "./scripts/generate-changelogs.sh",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
