--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          ssh-key: ${{ secrets.DEPLOY_KEY }
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Setup monorepo
         uses: ./.github/actions/setup-monorepo
