--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,5 +63,6 @@ jobs:
         run: |
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "ci-bot@noreply.mockybalboa.com"
-          git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
-          git push --follow-tags
+          git add packages/*/CHANGELOG.md packages/*/package.json
+          git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
+          git push --tags
