fix: use root readme on packages when publishing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
         run: |
           pnpm changeset version
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> .npmrc
+          node scripts/update-package-readmes.cjs
           pnpm changeset publish
           rm .npmrc
         env:
