fix: add explicit permissions for git in gh workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
   build_and_test:
     name: 🛠️ Build and test
     uses: ./.github/workflows/build-and-test.yml
+    permissions:
+      contents: read
 
   release:
     name: 🚀 Release packages
