--- a/packages/logger/tsconfig.types.json
+++ b/packages/logger/tsconfig.types.json
@@ -1,4 +1,7 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./dist/types"
+  },
   "exclude": ["dist", "**/*.test.ts", "src/test/**"]
 }
