--- a/packages/shared-config/package.json
+++ b/packages/shared-config/package.json
@@ -20,17 +20,12 @@
   "license": "MIT",
   "packageManager": "pnpm@10.14.0",
   "main": "./dist/cjs/shared-config.cjs",
-  "types": "./dist/cjs/shared-config.d.ts",
+  "types": "./dist/types/shared-config.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "default": "./dist/esm/shared-config.js",
-        "types": "./dist/esm/shared-config.d.ts"
-      },
-      "require": {
-        "default": "./dist/cjs/shared-config.cjs",
-        "types": "./dist/cjs/shared-config.d.ts"
-      }
+      "import": "./dist/esm/shared-config.js",
+      "require": "./dist/cjs/shared-config.cjs",
+      "types": "./dist/types/shared-config.d.ts"
     }
   },
   "scripts": {
@@ -39,8 +34,8 @@
     "build:esm:types": "tsc --emitDeclarationOnly --project tsconfig.build.esm.json",
     "build:cjs:types": "tsc --emitDeclarationOnly --project tsconfig.build.cjs.json",
     "build": "pnpm clean && pnpm run build:esm && pnpm run build:cjs && pnpm run build:types && pnpm run post:build",
-    "build:types": "pnpm run build:esm:types && pnpm run build:cjs:types",
-    "build:watch": "concurrently \"pnpm run build:esm --watch\" \"pnpm run build:cjs --watch\" \"pnpm run build:esm:types --watch\" \"pnpm run build:cjs:types --watch\" \"pnpm run post:build:watch\"",
+    "build:types": "tsc --emitDeclarationOnly --project tsconfig.types.json",
+    "build:watch": "concurrently \"pnpm run build:esm --watch\" \"pnpm run build:cjs --watch\" \"pnpm run build:types --watch\" \"pnpm run post:build:watch\"",
     "post:build": "pnpm --workspace-root package-post-cjs-build $(pwd)",
     "post:build:watch": "chokidar \"dist/cjs/**/*.cjs\" -c \"pnpm run post:build\"",
     "clean": "rimraf dist",
